# igniteai-lens-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
core/: config.py  llm_config.py  logging.py  observability.py  server.py
core/agents/: state.py  workflow.py
core/agents/prompts/: __init__.py  analyzer.py  classifier.py  decomposer.py  optimizer.py  planner.py  refiner.py  selector.py  visualizer.py
core/agents/sql/: __init__.py  analyzer.py  classifier.py  decomposer.py  optimizer.py  planner.py  refiner.py  selector.py  state.py  visualizer.py  workflow.py
core/agents/steps/: __init__.py  analyzer.py  classifier.py  optimizer.py  planner.py  refiner.py  selector.py  visualizer.py
core/api/: metrics.py
core/api/v1/: __init__.py
core/api/v1/routes/: agent.py  session.py
core/api/v1/schemas/: __init__.py  agent.py  session.py
core/cache/: __init__.py  cache_manager.py  cache_tag.py  custom_key_maker.py  metrics.py  redis_backend.py  tenant_cache.py
core/data_connectors/: __init__.py  base.py  duckdb.py  factory.py  mysql.py  postgresql.py  sqlite.py  types.py
core/database/: __init__.py  session.py
core/dependencies/: __init__.py  agent.py  cache.py  llm.py  message.py  session.py
core/exceptions/: __init__.py  base.py  connector.py  handlers.py  session.py
core/integrations/: __init__.py  platform_client.py  schema.py
core/middlewares/: __init__.py  cors.py  logging.py  metrics.py  pagination.py  security.py
core/models/: __init__.py  message.py  session.py
core/repositories/: __init__.py  message_repository.py  session_repository.py
core/schemas/: __init__.py  base.py
core/security/: auth.py  secrets_manager.py
core/services/: __init__.py
core/services/agent/: __init__.py  agent_service.py  executor.py
core/services/agent/visualization/: __init__.py  chart_selector.py  data_profiler.py  spec_validator.py  visualizer_service.py
core/services/message/: __init__.py  message_service.py
core/services/session/: session_metrics.py  session_service.py
core/services/sql/: __init__.py  agent_service.py  executor.py  sql_service.py  validator.py
core/services/visualization/: __init__.py  aggregation_engine.py  chart_templates.py  visualization_agent.py  visualizer_service.py
core/utils/: dialect_mapper.py  pagination.py  sql_parser.py
db_migrations/: env.py
db_migrations/versions/: 705868b2de7b_add_messages_table.py  ce838d7a3ddf_add_visualization_spec_to_messages.py  e7343021d990_init_tables.py
